// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render button 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button when rounded 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 35.35714285714286,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 35.35714285714286,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with children 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="[object Object]"
      accessibilityLabel="[object Object]"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="[object Object]"
      variant="body"
    >
      <Text
        accessibility="Test"
        accessibilityLabel="Test"
        style={
          Array [
            Object {
              "color": "#212121",
              "fontSize": 31,
              "lineHeight": 43,
            },
          ]
        }
        testID="Test"
        variant="body"
      >
        Test
      </Text>
    </Text>
  </View>
</View>
`;

exports[`<Button /> should render button with contrast 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with custom accessibility label 1`] = `
<View
  accessibilityLabel="testing"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with custom style 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {
          "backgroundColor": "#2980b9",
        },
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with custom text style 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {
            "color": "#2980b9",
          },
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with disabled 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={true}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#eeeeee",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={true}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#cccccc",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with loading 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "aspectRatio": 1,
          },
          undefined,
          Array [
            Object {},
            Object {
              "alignSelf": "center",
              "width": 86.42857142857142,
            },
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Aguarde"
        autoPlay={true}
        contrast={false}
        enableMergePathsAndroidForKitKatAndAbove={false}
        forwardedRef={[Function]}
        loop={true}
        onAnimationFinish={[Function]}
        onLayout={[Function]}
        progress={0}
        resizeMode="contain"
        sourceJson="{\\"v\\":\\"4.6.0\\",\\"fr\\":29.9700012207031,\\"ip\\":0,\\"op\\":49.0000019958109,\\"w\\":200,\\"h\\":200,\\"nm\\":\\"loading_ring_medium\\",\\"ddd\\":0,\\"assets\\":[],\\"layers\\":[{\\"ddd\\":0,\\"ind\\":1,\\"ty\\":4,\\"nm\\":\\"green ring 1\\",\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100},\\"r\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[0],\\"e\\":[360]},{\\"t\\":49.0000019958109}]},\\"p\\":{\\"a\\":0,\\"k\\":[100,100,0]},\\"a\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"s\\":{\\"a\\":0,\\"k\\":[200,200,100]}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[54,54]},\\"p\\":{\\"a\\":0,\\"k\\":[0,0]},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\"},{\\"ty\\":\\"st\\",\\"c\\":{\\"a\\":0,\\"k\\":[0.949,0.6,0.29,1]},\\"o\\":{\\"a\\":0,\\"k\\":100},\\"w\\":{\\"a\\":0,\\"k\\":6},\\"lc\\":2,\\"lj\\":1,\\"ml\\":4,\\"nm\\":\\"Stroke 1\\",\\"mn\\":\\"ADBE Vector Graphic - Stroke\\"},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"mn\\":\\"ADBE Vector Group\\"},{\\"ty\\":\\"tm\\",\\"s\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.667],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.644],\\"y\\":[0]},\\"n\\":[\\"0p667_1_0p644_0\\"],\\"t\\":10,\\"s\\":[0],\\"e\\":[100]},{\\"t\\":50.0000020365418}],\\"ix\\":1},\\"e\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.667],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.333],\\"y\\":[0]},\\"n\\":[\\"0p667_1_0p333_0\\"],\\"t\\":-1,\\"s\\":[0],\\"e\\":[100]},{\\"t\\":37.0000015070409}],\\"ix\\":2},\\"o\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":3},\\"m\\":1,\\"ix\\":2,\\"nm\\":\\"Trim Paths 1\\",\\"mn\\":\\"ADBE Vector Filter - Trim\\"}],\\"ip\\":0,\\"op\\":50.0000020365418,\\"st\\":-1.00000004073083,\\"bm\\":0,\\"sr\\":1},{\\"ddd\\":0,\\"ind\\":2,\\"ty\\":4,\\"nm\\":\\"flamingo ring 3\\",\\"parent\\":1,\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100},\\"r\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.785],\\"y\\":[1]},\\"o\\":{\\"x\\":[1],\\"y\\":[0]},\\"n\\":[\\"0p785_1_1_0\\"],\\"t\\":17,\\"s\\":[14.2],\\"e\\":[360]},{\\"t\\":50.0000020365418}]},\\"p\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"a\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100]}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[54,54]},\\"p\\":{\\"a\\":0,\\"k\\":[0,0]},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\"},{\\"ty\\":\\"st\\",\\"c\\":{\\"a\\":0,\\"k\\":[0.435,0.812,0.592,1]},\\"o\\":{\\"a\\":0,\\"k\\":100},\\"w\\":{\\"a\\":0,\\"k\\":6},\\"lc\\":2,\\"lj\\":1,\\"ml\\":4,\\"nm\\":\\"Stroke 1\\",\\"mn\\":\\"ADBE Vector Graphic - Stroke\\"},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"mn\\":\\"ADBE Vector Group\\"},{\\"ty\\":\\"tm\\",\\"s\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":42,\\"s\\":[0],\\"e\\":[1]},{\\"t\\":44.0000017921567}],\\"ix\\":1},\\"e\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.333],\\"y\\":[0]},\\"n\\":[\\"0p833_1_0p333_0\\"],\\"t\\":20,\\"s\\":[0],\\"e\\":[1]},{\\"t\\":44.0000017921567}],\\"ix\\":2},\\"o\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":3},\\"m\\":1,\\"ix\\":2,\\"nm\\":\\"Trim Paths 1\\",\\"mn\\":\\"ADBE Vector Filter - Trim\\"}],\\"ip\\":17.0000006924242,\\"op\\":44.0000017921567,\\"st\\":-1.00000004073083,\\"bm\\":0,\\"sr\\":1},{\\"ddd\\":0,\\"ind\\":3,\\"ty\\":4,\\"nm\\":\\"flamingo ring 2\\",\\"parent\\":1,\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100},\\"r\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.612],\\"y\\":[1]},\\"o\\":{\\"x\\":[1],\\"y\\":[0]},\\"n\\":[\\"0p612_1_1_0\\"],\\"t\\":17,\\"s\\":[14.2],\\"e\\":[360]},{\\"t\\":50.0000020365418}]},\\"p\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"a\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100]}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[54,54]},\\"p\\":{\\"a\\":0,\\"k\\":[0,0]},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\"},{\\"ty\\":\\"st\\",\\"c\\":{\\"a\\":0,\\"k\\":[0.435,0.812,0.592,1]},\\"o\\":{\\"a\\":0,\\"k\\":100},\\"w\\":{\\"a\\":0,\\"k\\":6},\\"lc\\":2,\\"lj\\":1,\\"ml\\":4,\\"nm\\":\\"Stroke 1\\",\\"mn\\":\\"ADBE Vector Graphic - Stroke\\"},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"mn\\":\\"ADBE Vector Group\\"},{\\"ty\\":\\"tm\\",\\"s\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":42,\\"s\\":[0],\\"e\\":[13.7]},{\\"t\\":44.0000017921567}],\\"ix\\":1},\\"e\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.333],\\"y\\":[0]},\\"n\\":[\\"0p833_1_0p333_0\\"],\\"t\\":20,\\"s\\":[0],\\"e\\":[13.7]},{\\"t\\":44.0000017921567}],\\"ix\\":2},\\"o\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":3},\\"m\\":1,\\"ix\\":2,\\"nm\\":\\"Trim Paths 1\\",\\"mn\\":\\"ADBE Vector Filter - Trim\\"}],\\"ip\\":17.0000006924242,\\"op\\":44.0000017921567,\\"st\\":-1.00000004073083,\\"bm\\":0,\\"sr\\":1},{\\"ddd\\":0,\\"ind\\":4,\\"ty\\":4,\\"nm\\":\\"flaming ring 1\\",\\"parent\\":1,\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100},\\"r\\":{\\"a\\":0,\\"k\\":0},\\"p\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"a\\":{\\"a\\":0,\\"k\\":[0,0,0]},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100]}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[54,54]},\\"p\\":{\\"a\\":0,\\"k\\":[0,0]},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\"},{\\"ty\\":\\"st\\",\\"c\\":{\\"a\\":0,\\"k\\":[0.435,0.812,0.592,1]},\\"o\\":{\\"a\\":0,\\"k\\":100},\\"w\\":{\\"a\\":0,\\"k\\":6},\\"lc\\":2,\\"lj\\":1,\\"ml\\":4,\\"nm\\":\\"Stroke 1\\",\\"mn\\":\\"ADBE Vector Graphic - Stroke\\"},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"mn\\":\\"ADBE Vector Group\\"},{\\"ty\\":\\"tm\\",\\"s\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.667],\\"y\\":[1]},\\"o\\":{\\"x\\":[1],\\"y\\":[0]},\\"n\\":[\\"0p667_1_1_0\\"],\\"t\\":8,\\"s\\":[0],\\"e\\":[100]},{\\"t\\":48.0000019550801}],\\"ix\\":1},\\"e\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.667],\\"y\\":[1]},\\"o\\":{\\"x\\":[1],\\"y\\":[0]},\\"n\\":[\\"0p667_1_1_0\\"],\\"t\\":-1,\\"s\\":[0],\\"e\\":[100]},{\\"t\\":37.0000015070409}],\\"ix\\":2},\\"o\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":3},\\"m\\":1,\\"ix\\":2,\\"nm\\":\\"Trim Paths 1\\",\\"mn\\":\\"ADBE Vector Filter - Trim\\"}],\\"ip\\":15.0000006109625,\\"op\\":44.0000017921567,\\"st\\":-1.00000004073083,\\"bm\\":0,\\"sr\\":1}]}"
        speed={1}
        style={
          Object {
            "alignSelf": "center",
            "aspectRatio": 1,
            "height": "100%",
            "width": 86.42857142857142,
          }
        }
        testID="loading"
        variant="button"
      />
    </View>
  </View>
</View>
`;

exports[`<Button /> should render button with test id 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with typography variant 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C6B09E",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 33,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="headline"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with variant 1`] = `
<View
  accessibilityLabel=""
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 0,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="secondary"
    disabled={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#805281",
          "borderColor": "black",
          "borderRadius": 11,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 70.71428571428572,
          "justifyContent": "center",
          "minWidth": 282.8571428571429,
          "paddingBottom": 6.285714285714286,
          "paddingLeft": 6.285714285714286,
          "paddingRight": 6.285714285714286,
          "paddingTop": 6.285714285714286,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibility="undefined"
      accessibilityLabel="undefined"
      buttonVariant="secondary"
      disabled={false}
      style={
        Array [
          Object {
            "color": "#212121",
            "fontSize": 31,
            "lineHeight": 43,
          },
          Object {
            "color": "#ffffff",
            "fontWeight": "500",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="body"
    />
  </View>
</View>
`;
